# smolagent

./: .gitignore  .pre-commit-config.yaml  README.md  SYSTEM.yaml  agent-deep.py  agent-forecast.py  agent.py  pyproject.toml  tools.py  utils.py
prompts/: EXECUTOR.yaml  PLANNER.yaml
skills/forecast/: SKILL.md
skills/research/: SKILL.md
