[build-system]
requires = ["setuptools>=75.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "smolagents-nico"
version = "0.1.0"
description = "A simple smolagent application."
requires-python = ">=3.10"
dependencies = [
    "smolagents[litellm]>=1.26.0",
    "datasets>=3.0",
    "pandas>=2.0",
    "numpy>=1.24",
    "scikit-learn>=1.3",
    "xgboost>=2.0",
    "matplotlib>=3.8",
    "python-dotenv>=1.0",
    "ddgs>=9.0",
    "beautifulsoup4>=4.12",
    "markdownify>=0.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.9",
]

[tool.setuptools.packages.find]
where = ["."]
